# serializer version: 1
# name: test_diagnostics_config_entry
  dict({
    'config_entry_data': dict({
      'auth_implementation': 'miele',
      'token': dict({
        'access_token': '**REDACTED**',
        'expires_in': 86399,
        'refresh_token': '**REDACTED**',
        'token_type': 'Bearer',
      }),
    }),
    'miele_data': dict({
      'actions': dict({
        '**REDACTED_019aa577ad1c330d': dict({
          'ambientLight': list([
          ]),
          'colors': list([
          ]),
          'deviceName': True,
          'light': list([
          ]),
          'modes': list([
          ]),
          'powerOff': False,
          'powerOn': True,
          'processAction': list([
            1,
            2,
            3,
          ]),
          'programId': list([
          ]),
          'runOnTime': list([
          ]),
          'startTime': list([
          ]),
          'targetTemperature': list([
            dict({
              'max': -14,
              'min': -28,
              'zone': 1,
            }),
          ]),
          'ventilationStep': list([
          ]),
        }),
        '**REDACTED_4b870e84d3e80013': dict({
          'ambientLight': list([
          ]),
          'colors': list([
          ]),
          'deviceName': True,
          'light': list([
          ]),
          'modes': list([
          ]),
          'powerOff': False,
          'powerOn': True,
          'processAction': list([
            1,
            2,
            3,
          ]),
          'programId': list([
          ]),
          'runOnTime': list([
          ]),
          'startTime': list([
          ]),
          'targetTemperature': list([
            dict({
              'max': -14,
              'min': -28,
              'zone': 1,
            }),
          ]),
          'ventilationStep': list([
          ]),
        }),
        '**REDACTED_57d53e72806e88b4': dict({
          'ambientLight': list([
          ]),
          'colors': list([
          ]),
          'deviceName': True,
          'light': list([
          ]),
          'modes': list([
          ]),
          'powerOff': False,
          'powerOn': True,
          'processAction': list([
            1,
            2,
            3,
          ]),
          'programId': list([
          ]),
          'runOnTime': list([
          ]),
          'startTime': list([
          ]),
          'targetTemperature': list([
            dict({
              'max': -14,
              'min': -28,
              'zone': 1,
            }),
          ]),
          'ventilationStep': list([
          ]),
        }),
        '**REDACTED_9f86e33c9f1a1be2': dict({
          'ambientLight': list([
          ]),
          'colors': list([
          ]),
          'deviceName': True,
          'light': list([
          ]),
          'modes': list([
          ]),
          'powerOff': False,
          'powerOn': True,
          'processAction': list([
            1,
            2,
            3,
          ]),
          'programId': list([
          ]),
          'runOnTime': list([
          ]),
          'startTime': list([
          ]),
          'targetTemperature': list([
            dict({
              'max': -14,
              'min': -28,
              'zone': 1,
            }),
          ]),
          'ventilationStep': list([
          ]),
        }),
        '**REDACTED_c9fe55cdf70786ca': dict({
          'ambientLight': list([
          ]),
          'colors': list([
          ]),
          'deviceName': True,
          'light': list([
          ]),
          'modes': list([
          ]),
          'powerOff': False,
          'powerOn': True,
          'processAction': list([
            1,
            2,
            3,
          ]),
          'programId': list([
          ]),
          'runOnTime': list([
          ]),
          'startTime': list([
          ]),
          'targetTemperature': list([
            dict({
              'max': -14,
              'min': -28,
              'zone': 1,
            }),
          ]),
          'ventilationStep': list([
          ]),
        }),
        '**REDACTED_e7bc6793e305bf53': dict({
          'ambientLight': list([
          ]),
          'colors': list([
          ]),
          'deviceName': True,
          'light': list([
          ]),
          'modes': list([
          ]),
          'powerOff': False,
          'powerOn': True,
          'processAction': list([
            1,
            2,
            3,
          ]),
          'programId': list([
          ]),
          'runOnTime': list([
          ]),
          'startTime': list([
          ]),
          'targetTemperature': list([
            dict({
              'max': -14,
              'min': -28,
              'zone': 1,
            }),
          ]),
          'ventilationStep': list([
          ]),
        }),
      }),
      'devices': dict({
        '**REDACTED_019aa577ad1c330d': dict({
          'ident': dict({
            'deviceIdentLabel': dict({
              'fabIndex': '17',
              'fabNumber': '**REDACTED**',
              'matNumber': '10804770',
              'swids': list([
                '4497',
              ]),
              'techType': 'KS 28423 D ed/c',
            }),
            'deviceName': '',
            'protocolVersion': 201,
            'type': dict({
              'key_localized': 'Device type',
              'value_localized': 'Refrigerator',
              'value_raw': 19,
            }),
            'xkmIdentLabel': dict({
              'releaseVersion': '31.17',
              'techType': 'EK042',
            }),
          }),
          'state': dict({
            'ProgramID': dict({
              'key_localized': 'Program name',
              'value_localized': '',
              'value_raw': 0,
            }),
            'ambientLight': None,
            'batteryLevel': None,
            'coreTargetTemperature': list([
            ]),
            'coreTemperature': list([
            ]),
            'dryingStep': dict({
              'key_localized': 'Drying level',
              'value_localized': '',
              'value_raw': None,
            }),
            'ecoFeedback': None,
            'elapsedTime': list([
            ]),
            'light': None,
            'plateStep': list([
            ]),
            'programPhase': dict({
              'key_localized': 'Program phase',
              'value_localized': '',
              'value_raw': 0,
            }),
            'programType': dict({
              'key_localized': 'Program type',
              'value_localized': '',
              'value_raw': 0,
            }),
            'remainingTime': list([
              0,
              0,
            ]),
            'remoteEnable': dict({
              'fullRemoteControl': True,
              'mobileStart': False,
              'smartGrid': False,
            }),
            'signalDoor': False,
            'signalFailure': False,
            'signalInfo': False,
            'spinningSpeed': dict({
              'key_localized': 'Spin speed',
              'unit': 'rpm',
              'value_localized': None,
              'value_raw': None,
            }),
            'startTime': list([
              0,
              0,
            ]),
            'status': dict({
              'key_localized': 'status',
              'value_localized': 'In use',
              'value_raw': 5,
            }),
            'targetTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': 4,
                'value_raw': 400,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'temperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': 4,
                'value_raw': 400,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'ventilationStep': dict({
              'key_localized': 'Fan level',
              'value_localized': '',
              'value_raw': None,
            }),
          }),
        }),
        '**REDACTED_4b870e84d3e80013': dict({
          'ident': dict({
            'deviceIdentLabel': dict({
              'fabIndex': '64',
              'fabNumber': '**REDACTED**',
              'matNumber': '<matNumber3>',
              'swids': list([
                '<swid1>',
                '<swid2>',
                '<swid3>',
                '<...>',
              ]),
              'techType': 'Fläkt',
            }),
            'deviceName': '',
            'protocolVersion': 2,
            'type': dict({
              'key_localized': 'Device type',
              'value_localized': 'Cooker Hood',
              'value_raw': 18,
            }),
            'xkmIdentLabel': dict({
              'releaseVersion': '02.72',
              'techType': 'EK039W',
            }),
          }),
          'state': dict({
            'ProgramID': dict({
              'key_localized': 'Program name',
              'value_localized': 'Off',
              'value_raw': 1,
            }),
            'ambientLight': 2,
            'batteryLevel': None,
            'dryingStep': dict({
              'key_localized': 'Drying level',
              'value_localized': '',
              'value_raw': None,
            }),
            'ecoFeedback': None,
            'elapsedTime': dict({
            }),
            'light': 1,
            'plateStep': list([
            ]),
            'programPhase': dict({
              'key_localized': 'Program phase',
              'value_localized': '',
              'value_raw': 4608,
            }),
            'programType': dict({
              'key_localized': 'Program type',
              'value_localized': 'Program',
              'value_raw': 0,
            }),
            'remainingTime': list([
              0,
              0,
            ]),
            'remoteEnable': dict({
              'fullRemoteControl': True,
              'mobileStart': False,
              'smartGrid': False,
            }),
            'signalDoor': False,
            'signalFailure': False,
            'signalInfo': False,
            'spinningSpeed': dict({
              'key_localized': 'Spin speed',
              'unit': 'rpm',
              'value_localized': None,
              'value_raw': None,
            }),
            'startTime': list([
              0,
              0,
            ]),
            'status': dict({
              'key_localized': 'status',
              'value_localized': 'Off',
              'value_raw': 1,
            }),
            'targetTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'temperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'ventilationStep': dict({
              'key_localized': 'Fan level',
              'value_localized': '0',
              'value_raw': 0,
            }),
          }),
        }),
        '**REDACTED_57d53e72806e88b4': dict({
          'ident': dict({
            'deviceIdentLabel': dict({
              'fabIndex': '21',
              'fabNumber': '**REDACTED**',
              'matNumber': '10805070',
              'swids': list([
                '4497',
              ]),
              'techType': 'FNS 28463 E ed/',
            }),
            'deviceName': '',
            'protocolVersion': 201,
            'type': dict({
              'key_localized': 'Device type',
              'value_localized': 'Freezer',
              'value_raw': 20,
            }),
            'xkmIdentLabel': dict({
              'releaseVersion': '31.17',
              'techType': 'EK042',
            }),
          }),
          'state': dict({
            'ProgramID': dict({
              'key_localized': 'Program name',
              'value_localized': '',
              'value_raw': 0,
            }),
            'ambientLight': None,
            'batteryLevel': None,
            'coreTargetTemperature': list([
            ]),
            'coreTemperature': list([
            ]),
            'dryingStep': dict({
              'key_localized': 'Drying level',
              'value_localized': '',
              'value_raw': None,
            }),
            'ecoFeedback': None,
            'elapsedTime': list([
            ]),
            'light': None,
            'plateStep': list([
            ]),
            'programPhase': dict({
              'key_localized': 'Program phase',
              'value_localized': '',
              'value_raw': 0,
            }),
            'programType': dict({
              'key_localized': 'Program type',
              'value_localized': '',
              'value_raw': 0,
            }),
            'remainingTime': list([
              0,
              0,
            ]),
            'remoteEnable': dict({
              'fullRemoteControl': True,
              'mobileStart': False,
              'smartGrid': False,
            }),
            'signalDoor': False,
            'signalFailure': False,
            'signalInfo': False,
            'spinningSpeed': dict({
              'key_localized': 'Spin speed',
              'unit': 'rpm',
              'value_localized': None,
              'value_raw': None,
            }),
            'startTime': list([
              0,
              0,
            ]),
            'status': dict({
              'key_localized': 'status',
              'value_localized': 'In use',
              'value_raw': 5,
            }),
            'targetTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': -18,
                'value_raw': -1800,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'temperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': -18,
                'value_raw': -1800,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'ventilationStep': dict({
              'key_localized': 'Fan level',
              'value_localized': '',
              'value_raw': None,
            }),
          }),
        }),
        '**REDACTED_9f86e33c9f1a1be2': dict({
          'ident': dict({
            'deviceIdentLabel': dict({
              'fabIndex': '00',
              'fabNumber': '**REDACTED**',
              'matNumber': '10937120',
              'swids': list([
              ]),
              'techType': 'DGM7640',
            }),
            'deviceName': '',
            'protocolVersion': 4,
            'type': dict({
              'key_localized': 'Device type',
              'value_localized': 'Steam oven with microwave',
              'value_raw': 45,
            }),
            'xkmIdentLabel': dict({
              'releaseVersion': '08.32',
              'techType': 'EK057',
            }),
          }),
          'state': dict({
            'ProgramID': dict({
              'key_localized': 'Program name',
              'value_localized': '',
              'value_raw': 0,
            }),
            'ambientLight': None,
            'batteryLevel': None,
            'coreTargetTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'coreTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'dryingStep': dict({
              'key_localized': 'Drying level',
              'value_localized': '',
              'value_raw': None,
            }),
            'ecoFeedback': None,
            'elapsedTime': list([
              0,
              0,
            ]),
            'light': 2,
            'plateStep': list([
            ]),
            'programPhase': dict({
              'key_localized': 'Program phase',
              'value_localized': '',
              'value_raw': 0,
            }),
            'programType': dict({
              'key_localized': 'Program type',
              'value_localized': '',
              'value_raw': 0,
            }),
            'remainingTime': list([
              0,
              0,
            ]),
            'remoteEnable': dict({
              'fullRemoteControl': True,
              'mobileStart': False,
              'smartGrid': False,
            }),
            'signalDoor': False,
            'signalFailure': False,
            'signalInfo': False,
            'spinningSpeed': dict({
              'key_localized': 'Spin speed',
              'unit': 'rpm',
              'value_localized': None,
              'value_raw': None,
            }),
            'startTime': list([
              0,
              0,
            ]),
            'status': dict({
              'key_localized': 'status',
              'value_localized': 'Off',
              'value_raw': 1,
            }),
            'targetTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'temperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'ventilationStep': dict({
              'key_localized': 'Fan level',
              'value_localized': '',
              'value_raw': None,
            }),
          }),
        }),
        '**REDACTED_c9fe55cdf70786ca': dict({
          'ident': dict({
            'deviceIdentLabel': dict({
              'fabIndex': '44',
              'fabNumber': '**REDACTED**',
              'matNumber': '11387290',
              'swids': list([
                '5975',
                '20456',
                '25213',
                '25191',
                '25446',
                '25205',
                '25447',
                '25319',
              ]),
              'techType': 'WCI870',
            }),
            'deviceName': '',
            'protocolVersion': 4,
            'type': dict({
              'key_localized': 'Device type',
              'value_localized': 'Washing machine',
              'value_raw': 1,
            }),
            'xkmIdentLabel': dict({
              'releaseVersion': '08.32',
              'techType': 'EK057',
            }),
          }),
          'state': dict({
            'ProgramID': dict({
              'key_localized': 'Program name',
              'value_localized': '',
              'value_raw': 0,
            }),
            'ambientLight': None,
            'batteryLevel': None,
            'coreTargetTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'coreTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'dryingStep': dict({
              'key_localized': 'Drying level',
              'value_localized': '',
              'value_raw': None,
            }),
            'ecoFeedback': dict({
              'currentEnergyConsumption': dict({
                'unit': 'kWh',
                'value': 0.0,
              }),
              'currentWaterConsumption': dict({
                'unit': 'l',
                'value': 0.0,
              }),
              'energyForecast': 0.1,
              'waterForecast': 0.0,
            }),
            'elapsedTime': list([
              0,
              0,
            ]),
            'light': None,
            'plateStep': list([
            ]),
            'programPhase': dict({
              'key_localized': 'Program phase',
              'value_localized': '',
              'value_raw': 0,
            }),
            'programType': dict({
              'key_localized': 'Program type',
              'value_localized': '',
              'value_raw': 0,
            }),
            'remainingTime': list([
              0,
              0,
            ]),
            'remoteEnable': dict({
              'fullRemoteControl': True,
              'mobileStart': False,
              'smartGrid': False,
            }),
            'signalDoor': True,
            'signalFailure': False,
            'signalInfo': False,
            'spinningSpeed': dict({
              'key_localized': 'Spin speed',
              'unit': 'rpm',
              'value_localized': None,
              'value_raw': None,
            }),
            'startTime': list([
              0,
              0,
            ]),
            'status': dict({
              'key_localized': 'status',
              'value_localized': 'Off',
              'value_raw': 1,
            }),
            'targetTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'temperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'ventilationStep': dict({
              'key_localized': 'Fan level',
              'value_localized': '',
              'value_raw': None,
            }),
          }),
        }),
        '**REDACTED_e7bc6793e305bf53': dict({
          'ident': dict({
            'deviceIdentLabel': dict({
              'fabIndex': '16',
              'fabNumber': '**REDACTED**',
              'matNumber': '11120960',
              'swids': list([
              ]),
              'techType': 'H7660BP',
            }),
            'deviceName': '',
            'protocolVersion': 4,
            'type': dict({
              'key_localized': 'Device type',
              'value_localized': 'Oven',
              'value_raw': 12,
            }),
            'xkmIdentLabel': dict({
              'releaseVersion': '08.32',
              'techType': 'EK057',
            }),
          }),
          'state': dict({
            'ProgramID': dict({
              'key_localized': 'Program name',
              'value_localized': '',
              'value_raw': 0,
            }),
            'ambientLight': None,
            'batteryLevel': None,
            'coreTargetTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'coreTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'dryingStep': dict({
              'key_localized': 'Drying level',
              'value_localized': '',
              'value_raw': None,
            }),
            'ecoFeedback': None,
            'elapsedTime': list([
              0,
              0,
            ]),
            'light': 2,
            'plateStep': list([
            ]),
            'programPhase': dict({
              'key_localized': 'Program phase',
              'value_localized': '',
              'value_raw': 0,
            }),
            'programType': dict({
              'key_localized': 'Program type',
              'value_localized': '',
              'value_raw': 0,
            }),
            'remainingTime': list([
              0,
              0,
            ]),
            'remoteEnable': dict({
              'fullRemoteControl': True,
              'mobileStart': False,
              'smartGrid': False,
            }),
            'signalDoor': False,
            'signalFailure': False,
            'signalInfo': False,
            'spinningSpeed': dict({
              'key_localized': 'Spin speed',
              'unit': 'rpm',
              'value_localized': None,
              'value_raw': None,
            }),
            'startTime': list([
              0,
              0,
            ]),
            'status': dict({
              'key_localized': 'status',
              'value_localized': 'Off',
              'value_raw': 1,
            }),
            'targetTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'temperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'ventilationStep': dict({
              'key_localized': 'Fan level',
              'value_localized': '',
              'value_raw': None,
            }),
          }),
        }),
      }),
      'missing_code_warnings': list([
        'None',
      ]),
    }),
  })
# ---
# name: test_diagnostics_device
  dict({
    'data': dict({
      'auth_implementation': 'miele',
      'token': dict({
        'access_token': '**REDACTED**',
        'expires_in': 86399,
        'refresh_token': '**REDACTED**',
        'token_type': 'Bearer',
      }),
    }),
    'info': dict({
      'manufacturer': 'Miele',
      'model': 'FNS 28463 E ed/',
    }),
    'miele_data': dict({
      'actions': dict({
        '**REDACTED_57d53e72806e88b4': dict({
          'ambientLight': list([
          ]),
          'colors': list([
          ]),
          'deviceName': True,
          'light': list([
          ]),
          'modes': list([
          ]),
          'powerOff': False,
          'powerOn': True,
          'processAction': list([
            1,
            2,
            3,
          ]),
          'programId': list([
          ]),
          'runOnTime': list([
          ]),
          'startTime': list([
          ]),
          'targetTemperature': list([
            dict({
              'max': -14,
              'min': -28,
              'zone': 1,
            }),
          ]),
          'ventilationStep': list([
          ]),
        }),
      }),
      'devices': dict({
        '**REDACTED_57d53e72806e88b4': dict({
          'ident': dict({
            'deviceIdentLabel': dict({
              'fabIndex': '21',
              'fabNumber': '**REDACTED**',
              'matNumber': '10805070',
              'swids': list([
                '4497',
              ]),
              'techType': 'FNS 28463 E ed/',
            }),
            'deviceName': '',
            'protocolVersion': 201,
            'type': dict({
              'key_localized': 'Device type',
              'value_localized': 'Freezer',
              'value_raw': 20,
            }),
            'xkmIdentLabel': dict({
              'releaseVersion': '31.17',
              'techType': 'EK042',
            }),
          }),
          'state': dict({
            'ProgramID': dict({
              'key_localized': 'Program name',
              'value_localized': '',
              'value_raw': 0,
            }),
            'ambientLight': None,
            'batteryLevel': None,
            'coreTargetTemperature': list([
            ]),
            'coreTemperature': list([
            ]),
            'dryingStep': dict({
              'key_localized': 'Drying level',
              'value_localized': '',
              'value_raw': None,
            }),
            'ecoFeedback': None,
            'elapsedTime': list([
            ]),
            'light': None,
            'plateStep': list([
            ]),
            'programPhase': dict({
              'key_localized': 'Program phase',
              'value_localized': '',
              'value_raw': 0,
            }),
            'programType': dict({
              'key_localized': 'Program type',
              'value_localized': '',
              'value_raw': 0,
            }),
            'remainingTime': list([
              0,
              0,
            ]),
            'remoteEnable': dict({
              'fullRemoteControl': True,
              'mobileStart': False,
              'smartGrid': False,
            }),
            'signalDoor': False,
            'signalFailure': False,
            'signalInfo': False,
            'spinningSpeed': dict({
              'key_localized': 'Spin speed',
              'unit': 'rpm',
              'value_localized': None,
              'value_raw': None,
            }),
            'startTime': list([
              0,
              0,
            ]),
            'status': dict({
              'key_localized': 'status',
              'value_localized': 'In use',
              'value_raw': 5,
            }),
            'targetTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': -18,
                'value_raw': -1800,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'temperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': -18,
                'value_raw': -1800,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'ventilationStep': dict({
              'key_localized': 'Fan level',
              'value_localized': '',
              'value_raw': None,
            }),
          }),
        }),
      }),
      'missing_code_warnings': list([
        'None',
      ]),
      'programs': 'Not implemented',
    }),
  })
# ---
